# Questia-Engine-old

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  conanfile.py
cmake/: Common.cmake  buildConfiguration.cmake  common.cmake  dependencies.cmake  qengMacros.cmake  safeguards.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: main.rs
include/: CMakeLists.txt
include/QENG/: ClientEngine.h  Engine.h  Window.h
include/QENG/graphics/: GraphicsAPI.h  GraphicsInstance.h  Monitor.h  Renderer.h  Sprite.h  Texture.h  TextureManager.h  VideoMode.h  Window.h  WindowOptions.h
include/QENG/graphics/impl/: GraphicsAPIBase.h  GraphicsAPIBase.ipp  MonitorBase.h  MonitorBase.ipp  TextureBase.h  TextureBase.ipp  TextureManagerBase.h  WindowBase.h  WindowBase.ipp
include/QENG/graphics/impl/opengl/: GraphicsAPI.h  GraphicsAPIImpl.h  Monitor.h  MonitorImpl.h  Window.h  WindowImpl.h
include/QENG/graphics/opengl/: GLInstance.h  GLMonitor.h  GLRenderer.h  GLWindow.h
include/QENG/math/: FixedVector.h  Vector.h  Vector2.h  Vector2.tpp
include/QENG/util/: pimpl.h
include/QuestiaEngine/: CMakeLists.txt
samples/: CMakeLists.txt  sample.cpp
src/: CMakeLists.txt  ClientEngine.cpp  Engine.cpp  Test.cpp  lib.rs
src/engine/: mod.rs
src/engine/renderer/: mod.rs
src/engine/renderer/graphics/: mod.rs
src/graphics/: GraphicsAPI.cpp  Monitor.cpp  Renderer.cpp  Sprite.cpp  Texture.cpp  TextureManager.cpp
src/graphics/impl/opengl/: GraphicsAPI.cpp  GraphicsAPIImpl.cpp  Monitor.cpp  MonitorImpl.cpp  Window.cpp  WindowImpl.cpp
src/graphics/mock/: GraphicsInstance.cpp  Window.cpp
src/graphics/opengl/: GLInstance.cpp  GLMonitor.cpp  GLRenderer.cpp  GLWindow.cpp  GraphicsInstance.cpp  Window.cpp
test/: CMakeLists.txt  Test.cpp
test/math/: Test_FixedVector.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
