[package]
name = "Questia-Engine"
version = "0.1.0"
authors = ["Matthew Kaminski <kaminskimateusz7@gmail.com>"]
edition = "2018"

[lib]
name = "qeng"
path = "src/lib.rs"

[[example]]
name = "main"
path = "examples/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.2"
gfx-hal = "0.7.0"
gfx-auxil = "0.8.0"
gfx-backend-vulkan = "0.7.0"
image = "0.23.14"
winit = "0.24.0"
shaderc = "0.7.1"
bincode = "1.3.1"
serde = { version = "1.0.115", features = ["derive"] }
