[package]
name = "qeng"
version = "0.1.0"
authors = ["Matthew Kaminski <kaminskimateusz7@gmail.com>"]
edition = "2018"

[lib]
name = "qeng"
path = "src/lib.rs"

[[example]]
name = "main"
path = "examples/main.rs"

[features]
default = []
vulkan = ["gfx-backend-vulkan"]
opengl = ["gfx-backend-gl"]
dx11 = ["gfx-backend-dx11"]
dx12 = ["gfx-backend-dx12"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "0.18.2"
gfx-hal = "0.7.0"
gfx-auxil = "0.8.0"
image = "0.23.14"
winit = "0.24.0"
shaderc = "0.7.2"
bincode = "1.3.2"
serde = { version = "1.0.125", features = ["derive"] }

[dependencies.gfx-backend-vulkan]
version = "0.7.0"
optional = true

[target.'cfg(not(target_os = "windows"))'.dependencies.gfx-backend-gl]
version = "0.7.1"
optional = true

[dependencies.gfx-backend-dx11]
version = "0.7.0"
optional = true

[dependencies.gfx-backend-dx12]
version = "0.7.0"
optional = true
